--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -2,20 +2,7 @@
 	displayBlock="true" xmlns:l="sap.ui.layout" xmlns="sap.m" xmlns:core="sap.ui.core">
 	<Shell id="shell">
 		<App id="app">
-			<pages>
-				<Page id="page" title="{i18n>title}" showFooter="true">
-					<content></content>
-					<footer>
-						<Toolbar>
-							<content>
-								<ToolbarSpacer/>
-								<Button id="app_button_edit" press="onEditPress" text="{i18n>button.edit}" type="Emphasized" visible="{= !${editModel>/editmode}}"/>
-								<Button id="app_button_save" press="onSavePress" text="{i18n>button.save}" type="Accept" visible="{editModel>/editmode}"/>
-							</content>
-						</Toolbar>
-					</footer>
-				</Page>
-			</pages>
+			<pages></pages>
 		</App>
 	</Shell>
 </mvc:View>
