--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -1,6 +1,6 @@
 <mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m"
 	controllerName="at.clouddna.training00.FioriDeepDive.controller.Main" xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page title="{i18n>main.title}" id="main_page">
+	<Page title="{i18n>title}" id="main_page">
 		<content>
 			<Table id="main_table" headerText="{i18n>main.table.title}" items="{/CustomerSet}">
 				<columns>
@@ -30,7 +30,7 @@
 					</Column>
 				</columns>
 				<items>
-					<ColumnListItem>
+					<ColumnListItem type="Navigation" press="onCustomerPress">
 						<cells>
 							<Text text="{Firstname}"/>
 							<Text text="{Lastname}"/>
@@ -39,7 +39,11 @@
 							<Text text="{Email}"/>
 							<Text text="{Phone}"/>
 							<Link text="{Website}" href="https://{Website}" target="_blank"/>
-							<Button press="onDeleteCustomerPress" icon="sap-icon://delete"/>
+							<Button press="onDeleteCustomerPress" icon="sap-icon://delete">
+								<customData>
+									<core:CustomData key="firstname" value="{Firstname}"/>
+								</customData>
+							</Button>
 						</cells>
 					</ColumnListItem>
 				</items>
