--- a/webapp/view/EditCustomer.fragment.xml
+++ b/webapp/view/EditCustomer.fragment.xml
@@ -4,25 +4,25 @@
 		singleContainerFullSize="false">
 		<f:content>
 			<Label id="edit_label_customerid" text="{i18n>app.customerid}" labelFor="edit_input_customerid"/>
-			<Input id="edit_input_customerid" value="{/customerid}"/>
+			<Input id="edit_input_customerid" value="{CustomerId}"/>
 			<Label id="edit_label_firstname" text="{i18n>app.firstname}" labelFor="edit_input_firstname"/>
-			<Input id="edit_input_firstname" value="{/firstname}"/>
+			<Input id="edit_input_firstname" value="{Firstname}"/>
 			<Label id="edit_label_lastname" text="{i18n>app.lastname}" labelFor="edit_input_lastname"/>
-			<Input id="edit_input_lastname" value="{/lastname}"/>
+			<Input id="edit_input_lastname" value="{Lastname}"/>
 			<Label id="edit_label_title" text="{i18n>app.title}" labelFor="edit_input_title"/>
-			<Input id="edit_input_title" value="{/title}"/>
+			<Input id="edit_input_title" value="{AcademicTitle}"/>
 			<Label id="edit_label_gender" text="{i18n>app.gender}" labelFor="edit_select_gender"/>
-			<Select id="edit_select_gender" items="{genderModel>/genders}" selectedKey="{/gender}">
+			<Select id="edit_select_gender" items="{genderModel>/genders}" selectedKey="{Gender}">
 				<items>
-					<core:Item key="{genderModel>}" text="{genderModel>}"/>
+					<core:Item key="{genderModel>}" text="{path: 'genderModel>', formatter: '.formatter.genderFormatter'}"/>
 				</items>
 			</Select>
 			<Label id="edit_label_email" text="{i18n>app.email}" labelFor="edit_input_email"/>
-			<Input id="edit_input_email" value="{/email}"/>
+			<Input id="edit_input_email" value="{Email}"/>
 			<Label id="edit_label_phone" text="{i18n>app.phone}" labelFor="edit_input_phone"/>
-			<Input id="edit_input_phone" value="{/phone}"/>
+			<Input id="edit_input_phone" value="{Phone}"/>
 			<Label id="edit_label_webiste" text="{i18n>app.website}" labelFor="edit_input_website"/>
-			<Input id="edit_input_website" value="{/website}"/>
+			<Input id="edit_input_website" value="{Website}"/>
 		</f:content>
 	</f:SimpleForm>
 </core:FragmentDefinition>
