--- a/webapp/view/Customer.view.xml
+++ b/webapp/view/Customer.view.xml
@@ -1,12 +1,13 @@
 <mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m"
 	controllerName="at.clouddna.training00.FioriDeepDive.controller.Customer" xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page id="page" title="{i18n>title}" showFooter="true">
+	<Page id="page" title="{i18n>title}" showFooter="true" showNavButton="{= !${editModel>/editmode}}" navButtonPress="onNavBack">
 		<content></content>
 		<footer>
 			<Toolbar>
 				<content>
 					<ToolbarSpacer/>
 					<Button id="customer_button_edit" press="onEditPress" text="{i18n>button.edit}" type="Emphasized" visible="{= !${editModel>/editmode}}"/>
+					<Button id="customer_button_cancel" press="onCancelPress" text="{i18n>button.cancel}" type="Reject" visible="{editModel>/editmode}"/>
 					<Button id="customer_button_save" press="onSavePress" text="{i18n>button.save}" type="Accept" visible="{editModel>/editmode}"/>
 				</content>
 			</Toolbar>
