--- a/webapp/view/Customer.view.xml
+++ b/webapp/view/Customer.view.xml
@@ -1,5 +1,5 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m"
-	controllerName="at.clouddna.training00.FioriDeepDive.controller.Customer" xmlns:html="http://www.w3.org/1999/xhtml">
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" busyIndicatorDelay="0"
+	controllerName="at.clouddna.training0.FioriDeepDive.controller.Customer" xmlns:html="http://www.w3.org/1999/xhtml">
 	<Page id="page" title="{i18n>title}" showFooter="true" showNavButton="{= !${editModel>/editmode}}" navButtonPress="onNavBack">
 		<content></content>
 		<footer>
